<resources>
    <string name="app_name">GZH</string>
    <string name="forget_pwd">Forget password?</string>
    <string name="asset1">Asset</string>
    <string name="trade1">Market</string>
    <string name="market1">News</string>
    <string name="mine1">Me</string>
    <string name="register">Sign up</string>
    <string name="num_pwd">Set up password</string>
    <string name="num_pwd1">Change password</string>
    <string name="pwd_sure">Confirm payment password</string>
    <string name="pwd_sure1">Payment password successfully changed!</string>
    <string name="pwd_error">当前支付密码错误！</string>
    <string name="pwd_surex">Confirm the new payment password.</string>
    <string name="gesture_pwd">Gesture password</string>
    <string name="old_gesture_pwd">Current gesture password</string>
    <string name="gesture_pwd_again">Re-verify</string>
    <string name="change_gesture_pwd">Change gesture password</string>
    <string name="toast_gesture_error">Wrong current gesture password, you still have</string>
    <string name="toast_gesture_error3">Wrong gesture password, you still have</string>
    <string name="toast_gesture_error1">changes!</string>
    <string name="toast_gesture_success">Gesture password successfully saved!</string>
    <string name="toast_gesture_error2">Five chances has been used up, please login again!</string>
    <string name="toast_gesture_diff">Different gesture password!</string>
    <string name="info_tip">In order to provide you with a better wallet service, please register first.</string>
    <string name="pwd_tip">Please enter 6 digital numbers for payment password.</string>
    <string name="pwd_tip1a">Enter origin payment password</string>
    <string name="pwd_tip1">Please enter origin payment password!</string>
    <string name="pwd_tip2a">Enter new payment password</string>
    <string name="pwd_tip2">Please enter new payment password!</string>
    <string name="pwd_tip3">Please enter confirm payment password!</string>
    <string name="gesture_tip">Tip:gesture password needs at least 5 connected points!</string>
    <string name="hint_wallet_name">Set up wallet name</string>
    <string name="wallet_name">Nickname</string>
    <string name="hint_mobile">Please enter your phone number</string>
    <string name="toast_mobile">Please enter correct phone number</string>
    <string name="mobile">Phone number</string>
    <string name="hint_code">Please enter verification code</string>
    <string name="code">Verification code</string>
    <string name="send">Send</string>
    <string name="collect">Receive</string>
    <string name="next">Next</string>
    <string name="sure">Confirm</string>
    <string name="login">Log in</string>
    <string name="reset_pwd">Reset password</string>
    <string name="create_wallet">Register</string>
    <string name="read_agree">I have read and agreed</string>
    <string name="service_privacy"><u>Service and privacy protocol</u></string>
    <string name="copyright">Copyright © 2018</string>
    <string name="toast_pwd">Please enter 6 digital password!</string>
    <string name="toast_sure_pwd">Please make sure the password is the same twice!</string>
    <string name="jump">Skip</string>
    <string name="asset">Asset</string>
    <string name="trade">Market</string>
    <string name="market">News</string>
    <string name="mine">Me</string>
    <string name="pwd_img">Password image</string>
    <string name="collect_coin">Collect coin</string>
    <string name="send_coin">Send coin</string>
    <string name="address">Receiving address</string>
    <string name="address0">Address</string>
    <string name="count">Amount</string>
    <string name="group">Available: </string>
    <string name="all">All</string>
    <string name="ps">Remarks</string>
    <string name="copy">Copy</string>
    <string name="personal_asset">Personal Asset</string>
    <string name="no_data">No data</string>
    <string name="transaction_record">Transaction record</string>
    <string name="exchange">Market</string>
    <string name="currency">Coin</string>
    <string name="new_praise">Price</string>
    <string name="chg">Change</string>
    <string name="notice">Notice</string>
    <string name="hot">Hot</string>
    <string name="news">News</string>
    <string name="update">Edit</string>
    <string name="message">Messages</string>
    <string name="message_center">Message center</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="about">About us</string>
    <string name="country">国家和地区</string>
    <string name="go_to_reg">The phone number is not registered, go to register?</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Settings</string>
    <string name="select_language">Language</string>
    <string name="profile">\u3000\u3000GZH是”GZH共创链“的官方应用。提供安全、便捷的GZH数字资产存管、转账服务。</string>
    <string name="agreement">Use Agreement</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="version_log">Version log</string>
    <string name="version_log1">版本1.0.0 更新时间：2018.12.25\n更新内容\n1、现已支持GZH转账、收款，即将支持更多\n2、可以选择是否显示您的某一项资产\n3、您可以通过快捷菜单发起快速转账和收款\n4、GZH动态会通过系统消息推送给您，请留意我的-消息\n5、您有任何意见和建议，可以通过我的-意见反馈发邮件给我们</string>
    <string name="check_new">Check for updates</string>
    <string name="check_new1">最新版本</string>
    <string name="check_new2">已是最新版本！</string>
    <string name="help0">How to create a wallet?</string>
    <string name="help0_a">xxxxxxx</string>
    <string name="help1">How to back up the wallet/identity?</string>
    <string name="help1_a">In DiorPay, we introduced the concept of digital identity, for a digital identity, you can click here for a detailed explanation. So how do we back up the wallet/identity?\n1. Click on \"My\" -> and then click on the avatar button at the top to enter my identity interface.\n2. Click \"Backup Identity\" and enter the password when creating the identity.\n3. Start backing up the identity, please copy the mnemonic in order. For how to safely back up the mnemonic, you can click here for detailed explanation.\nPS: When you create a digital identity, the digital identity will correspond to a wallet address, the DOB\'s wallet address, and the identity you backed up, which is also the mnemonic for this address.</string>
    <string name="help2">What digital currencies does DiorPay support?</string>
    <string name="help2_a">DiorPay is a cross-chain wallet that currently supports SAS BZF DOB ETH BTC and other ERC20 compliant tokens\nIn addition, users can see for themselves whether the tokens they want to search meet the ERC20 standard:\n<a href="https://etherscan.io/tokens">https://etherscan.io/tokens</a></string>
    <string name="help3">Can the digital currency type displayed on the wallet homepage be modified?</string>
    <string name="help3_a">No</string>
    <string name="help4">How to transfer/receive?</string>
    <string name="help4_a">Go to the wallet asset interface and go to the wallet list page. Select the wallet you want to use. Take the DOB wallet as an example. Go to the Assets page and click on a token in the list to see its detailed page. At the bottom there are two buttons - collection and transfer.\nTip: Of course, you can also use the asset items that you want to transfer or collect money to quickly operate the collection and transfer operations.\nClick the payment button to enter the payment page. In this page, the top character is the address of the wallet, the middle is the QR code corresponding to the address, and the bottom is \"asset name\" and \"transfer amount\".\nFor the payment without the amount limit, you can copy the address string or QR code directly to the transfer party. This address string is different from the two-dimensional code and the private key or mnemonic. You can send it to others with confidence, without worrying about security issues.\nIf you encounter a payment that requires a specified amount. You can click the \"Specify Amount\" button in the lower right corner, enter the amount of the amount in the pop-up amount box, and click OK.\nClick the \"Transfer\" button in the lower right corner of the asset interface to enter the asset transfer interface. Here, take the DOB as an example, enter the amount to be transferred, and fill in the remarks if necessary. Enter the other party\'s wallet address in the payment address.</string>
    <string name="help5">Is DiorPay charged? What is the rate?</string>
    <string name="help5_a">xxxxxxx</string>
    <string name="help6">How to change the password? What if I forget my password?</string>
    <string name="help6_a">First, in the decentralized wallet, because all user authentication content, such as transaction passwords, private keys, mnemonics, etc., are stored locally on the user\'s mobile phone, not stored in the centralized server, so if the user forgets the password is There is no way to reset it by a third party agency such as the DiorPay team.\nThe only solution is to reset the new password by re-importing the mnemonic or private key.\nPS: Make sure the backup mnemonic or private key is correct. If you have any questions, please contact customer service.</string>
    <string name="help7">How to delete the wallet?</string>
    <string name="help7_a">Click on the phone to delete it.</string>
    <string name="help8">Can the backup wallet mnemonic be retrieved after it is lost?</string>
    <string name="help8_a">xxxxxxx</string>
    <string name="toast_code">Verification sent, please check!</string>
    <string name="toast_name">Please enter wallet name!</string>
    <string name="toast_right_code">Please enter four verification codes!</string>
    <string name="toast_choose_yes">请阅读并同意服务和隐私协议！</string>
    <string name="toast_register_success">Wallet successfully created!</string>
    <string name="toast_login_success">Successfully logged in!</string>
    <string name="add_asset">Add asset</string>
    <string name="miner_fee">Miner fee</string>
    <string name="toast_select_coin">This currency type has existed!</string>
    <string name="toast_copy_success">Successfully copied!</string>
    <string name="toast_add_asset_success">Successfully added asset!</string>
    <string name="toast_input_address">Please enter right receiving address!</string>
    <string name="toast_input_count">Please enter amount!</string>
    <string name="toast_input_count0">Amount cannot be 0!</string>
    <string name="toast_input_count1">Entered amount is more than available amount!</string>
    <string name="toast_input_count2">不能转账到自己账户！</string>
    <string name="toast_transform_success">Successfully transferred coins!</string>
    <string name="out">Send</string>
    <string name="in">Receive</string>
    <string name="remain">Balance</string>
    <string name="all_read">All read</string>
    <string name="transfer_notice">Transfer notice</string>
    <string name="system_message">System message</string>
    <string name="code_not_right">QR code is not the wallet address</string>
    <string name="volume">Vol: </string>
    <string name="toast_update_name">Please enter nickname!</string>
    <string name="toast_update_name1">Successfully edit nickname!</string>
    <string name="select_email">Please select mail class applications</string>
    <string name="coin_out">Transfer</string>
</resources>