<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange"
            android:textColor="@color/textBlack"
            android:textSize="25sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"/>
        
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@mipmap/add"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_marginRight="16dp"/>
        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="@color/bg_gray">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:textColor="@color/textGray"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_praise"
            android:textColor="@color/textGray"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chg"
            android:textColor="@color/textGray"
            android:textSize="14sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="28dp"
            android:gravity="right"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.ProgressBar"
            android:layout_gravity="center"/>

        <com.gzh.library.pull.AutoPullAbleGridView
            android:id="@+id/gv_trade_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:divider="@null"
            android:footerDividersEnabled="false"
            android:listSelector="#00000000"
            android:cacheColorHint="#00000000"/>

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textColor="@color/textBlack"
            android:textSize="23sp"
            android:visibility="gone"
            android:layout_gravity="center"/>

    </FrameLayout>

</LinearLayout>