<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBg">

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp">

            <ImageView
                android:layout_width="11dp"
                android:layout_height="20dp"
                android:src="@mipmap/back"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/coin_out"
            android:textColor="@color/textBlack"
            android:textSize="22sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.gzh.gzh.view.HorizontalListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="46dp"
            android:background="@drawable/bg_round_edit_gray2"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_address"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="false"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:paddingLeft="24dp"
                android:singleLine="true"
                android:textColorHint="@color/textGray2"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_sweep"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@mipmap/scan" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_count"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_round_edit_gray2"
            android:hint="@string/count"
            android:inputType="numberDecimal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:singleLine="true"
            android:textColorHint="@color/textGray2"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/group" />

            <TextView
                android:id="@+id/tv_can_pay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/group"
                android:textColor="@color/gray666"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_all"
                android:layout_width="46dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:background="@drawable/bg_round_edit_gray1"
                android:gravity="center"
                android:text="@string/all"
                android:textColor="@color/gray666"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_miner"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_round_edit_gray2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="24dp"
                android:text="@string/miner_fee"
                android:textColor="@color/textGray2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_miner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/textBlack"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:text=""
                android:textColor="@color/c3C"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_go"
                android:layout_width="10dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:src="@mipmap/go" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_round_text_green2"
            android:elevation="4dp"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>